--- a/PaulVacationTracker/app/src/main/res/layout/content_employee_vacation_detail.xml
+++ b/PaulVacationTracker/app/src/main/res/layout/content_employee_vacation_detail.xml
@@ -1,11 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
+    android:padding="20dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".EmployeeVacationDetailActivity"
     tools:showIn="@layout/activity_employee_vacation_detail">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Employee name:"/>
+
+
+
+    <TextView
+        android:id="@+id/detail_employee"
+        android:text="Employee name goes here"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        android:layout_margin="20dp"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Vacation start date:"/>
+
+
+
+    <TextView
+        android:id="@+id/detail_start_date"
+        android:text="Vacation start date goes here"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        android:layout_margin="20dp"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Vacation end date:"/>
+
+
+
+    <TextView
+        android:id="@+id/detail_end_date"
+        android:text="Vacation end date goes here"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        android:layout_margin="20dp"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Reason:"/>
+
+
+
+    <TextView
+        android:id="@+id/detail_reason"
+        android:text="Reason goes here"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        android:layout_margin="20dp"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+</LinearLayout>
